<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snuboat_nav</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mouse890@snu.ac.kr">jiyoung</maintainer>
  <license>TODO: License declaration</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
  <!-- <export>
    <colcon-ros package-name="${PROJECT_NAME}" />
  </export> -->
</package>
